// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginBox /> renders 1`] = `
<div>
  <Connect(LoginSocialButtons) />
  <ReduxForm />
</div>
`;

exports[`<LoginBox /> renders a top text and a bottom text if specified 1`] = `
<div>
  <Alert
    bsClass="alert"
    bsStyle="info"
    className="text-center"
    closeLabel="Close alert"
  >
    <WYSIWYGRender
      value="Texte du haut"
    />
  </Alert>
  <Connect(LoginSocialButtons) />
  <ReduxForm />
  <WYSIWYGRender
    className="text-center excerpt mt-15"
    value="Texte du bas"
  />
</div>
`;

exports[`<LoginBox /> renders without LoginForm 1`] = `
<div>
  <Connect(LoginSocialButtons) />
</div>
`;

exports[`<LoginBox /> renders without prefix 1`] = `
<div>
  <Connect(LoginSocialButtons)
    prefix=""
  />
  <ReduxForm />
</div>
`;
